[package]
name = "tower-td-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros", "time", "sync", "fs", "io-util"] }
base64 = "0.22"
bincode = "1.3"
quinn = { version = "0.11", default-features = false, features = ["rustls", "runtime-tokio"] }
futures-util = "0.3"
rfd = "0.17.2"
chrono = "0.4"
arboard = "3.4"
rcgen = "0.12"
get_if_addrs = "0.5"
stunclient = "0.4.2"
