[workspace]
members = [".", "crates/p2p-connection"]

[package]
name = "tower-td-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros", "time", "sync", "fs", "io-util"] }
p2p-connection = { path = "crates/p2p-connection" }
