[package]
name = "p2p-connection"
version = "0.1.0"
edition = "2024"

[dependencies]
quinn = { version = "0.11", default-features = false, features = ["rustls", "runtime-tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "io-util"] }
get_if_addrs = "0.5"
rcgen = "0.12"
ring = "0.17"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[[example]]
name = "ping_pong"
path = "examples/ping_pong.rs"
